Testing. Attempting to fix bug where search icon width gets set to 4px on mobile devices

--- a/src/styles/SearchInput.css
+++ b/src/styles/SearchInput.css
@@ -1,4 +1,4 @@
-/* Search Input */
+/* Search Input
 .input {
   padding: 0.25rem 1rem;
   border-radius: 30px;
@@ -21,4 +21,27 @@
   .input {
     min-width: 20vw;
   }
+} */
+
+.input {
+  padding: 1rem;
+  border-radius: 30px;
+  border: 0;
+  outline: none;
+  flex-grow: 1;
+  width: 100%;
+}
+
+.input::placeholder {
+  color: #bbb;
+}
+
+.input-group {
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  width: 30rem;
 }
